[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "restormer-modular"
version = "1.1.0"
description = "A modular, standalone refactor of the Restormer image restoration project with multi-model support."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Himesh" }
]
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
    "einops",
    "pyyaml",
    "tqdm",
    "scikit-image",
    "tensorboard",
    "timm",
    "mamba-ssm",
    "causal-conv1d>=1.2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "core*", "data*"]
