[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "restormer-modular"
version = "1.1.1"
description = "A modular Restormer refactor with multi-model support, enhanced logging, and model complexity analytics (GFLOPs/Params)."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Himesh" }
]
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
    "einops",
    "pyyaml",
    "tqdm",
    "scikit-image",
    "tensorboard",
    "timm",
    "mamba-ssm",
    "causal-conv1d>=1.2.0",
    "PyWavelets",
    "fvcore"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "core*", "data*"]
